--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         </div>
         <div>
           <label for="adultWeight">Expected adult weight (lb)</label>
-          <input id="adultWeight" type="range" min="3" max="200" step="1" value="55" />
-          <div class="muted">Aging rate adjusts <em>continuously</em> with weight. <span id="adultWeightVal">55</span> lb</div>
+          <input id="adultWeight" type="range" min="5" max="200" step="5" value="55" />
+          <div class="muted">Aging rate uses <em>5‑lb steps</em>. <span id="adultWeightVal">55</span> lb</div>
         </div>
         <div>
           <label for="chewer">Chewer level</label>
@@ -110,8 +110,7 @@
         </div>
       </div>
 
-      <label for="giftUrl">Gift ideas feed URL (JSON)</label>
-      <input id="giftUrl" type="text" value="https://raw.githubusercontent.com/CandidQuality/dog-birthday-feed/main/dog-gifts.json" />
+      <!-- Gift feed is internal; no URL input shown -->
 
       <div class="row" style="margin-top:8px">
         <label class="muted"><input id="ignoreAge" type="checkbox"/> Ignore age filter</label>
@@ -156,18 +155,22 @@
   </div>
 
   <script>
-    // --- THEME & SETUP
+    // THEME
     const root = document.documentElement; const toggleBtn = document.getElementById('themeToggle');
     const savedTheme = localStorage.getItem('barkday-theme') || 'dark';
     root.setAttribute('data-theme', savedTheme === 'light' ? 'light' : 'dark');
     toggleBtn.textContent = savedTheme === 'light' ? '🌙 Dark' : '☀️ Light';
     toggleBtn.addEventListener('click', () => { const now = root.getAttribute('data-theme') === 'light' ? 'dark' : 'light'; root.setAttribute('data-theme', now); localStorage.setItem('barkday-theme', now); toggleBtn.textContent = now === 'light' ? '🌙 Dark' : '☀️ Light'; });
 
+    // CONSTANTS
+    const GIFT_FEED_URL = 'https://raw.githubusercontent.com/CandidQuality/dog-birthday-feed/main/dog-gifts.json'; // hidden from UI
+
+    // Elements
     const el = id => document.getElementById(id);
     const els = {
       dogName: el('dogName'), dob: el('dob'), adultWeight: el('adultWeight'), adultWeightVal: el('adultWeightVal'),
       chewer: el('chewer'), showEpi: el('showEpigenetic'), smooth: el('smoothMilestones'), breed: el('breed'), breedGroup: el('breedGroup'),
-      giftUrl: el('giftUrl'), ignoreAge: el('ignoreAge'), ignoreSize: el('ignoreSize'), ignoreChewer: el('ignoreChewer'),
+      ignoreAge: el('ignoreAge'), ignoreSize: el('ignoreSize'), ignoreChewer: el('ignoreChewer'),
       calcBtn: el('calcBtn'), resetBtn: el('resetBtn'), shareBtn: el('shareBtn'), sizeWarn: el('sizeWarn'),
       nextBday: el('nextBday'), nextBdayDelta: el('nextBdayDelta'), dogAge: el('dogAge'), humanYears: el('humanYears'), slopeNote: el('slopeNote'),
       addCal: el('addCalBtn'), remind: el('remindBtn'), addYearSeries: el('addYearSeries'),
@@ -179,43 +182,20 @@
     function renderHero(){ els.heroLine.textContent = `Let’s find out together what ${possessive(els.dogName.value)} birthdays are, so we can celebrate every single one.`; }
     els.dogName.addEventListener('input', renderHero); renderHero();
 
-    // Slider label
-    els.adultWeight.addEventListener('input', ()=> els.adultWeightVal.textContent = els.adultWeight.value);
+    // Slider label (5‑lb steps)
+    els.adultWeight.addEventListener('input', ()=> { const v = Math.round(parseInt(els.adultWeight.value,10)/5)*5; els.adultWeight.value = v; els.adultWeightVal.textContent = v; });
 
-    // ---- MODEL HELPERS
+    // Helpers
     function daysBetween(a,b){ return Math.floor((b - a) / (24*60*60*1000)); }
     function clamp(n,min,max){ return Math.min(Math.max(n,min),max); }
 
-    // Weight‑continuous slope from 5→7 (soft 7.2 at 200 lb)
-    function slopeFromWeight(lb){
-      const w = clamp(lb, 3, 200);
-      if(w <= 20) return 5;
-      if(w <= 50) return 5 + (w-20)*(1/30);
-      if(w <= 90) return 6 + (w-50)*(1/40);
-      return 7 + (w-90)*(0.2/110);
-    }
-
+    // Weight‑continuous slope 5→7 (soft 7.2 at 200 lb)
+    function slopeFromWeight(lb){ const w = clamp(lb, 5, 200); if(w <= 20) return 5; if(w <= 50) return 5 + (w-20)*(1/30); if(w <= 90) return 6 + (w-50)*(1/40); return 7 + (w-90)*(0.2/110); }
     function smoothBlend(x, center, width){ const t = clamp((x - (center - width/2)) / width, 0, 1); return t*t*(3 - 2*t); }
+    function humanEqYears(tYears, lb, useSmooth){ const R = slopeFromWeight(lb); if(!useSmooth){ if(tYears <= 1) return 15*tYears; if(tYears <= 2) return 15 + 9*(tYears-1); return 24 + R*(tYears-2); } const f1 = smoothBlend(tYears, 1, 0.25); const slope12 = 15 + f1*(9-15); if(tYears <= 2){ const part0 = Math.min(tYears,1)*15; const part1 = tYears>1 ? (tYears-1)*slope12 : 0; return part0 + part1; } const f2 = smoothBlend(tYears, 2, 0.5); const slopePost = 9 + f2*(R-9); const upTo2 = humanEqYears(2, lb, true); return upTo2 + (tYears-2)*slopePost; }
+    function nextDogYearDate(dob, currentHumanEq, lb, useSmooth){ const target = Math.floor(currentHumanEq) + 1; const now = new Date(); const yearsNow = daysBetween(dob, now) / 365.2425; let lo = yearsNow, hi = yearsNow + 5; for(let i=0;i<40;i++){ const mid=(lo+hi)/2; const h=humanEqYears(mid, lb, useSmooth); if(h>=target) hi=mid; else lo=mid; } const t=(lo+hi)/2; return new Date(dob.getTime() + t*365.2425*24*60*60*1000); }
 
-    function humanEqYears(tYears, lb, useSmooth){
-      const R = slopeFromWeight(lb);
-      if(!useSmooth){
-        if(tYears <= 1) return 15*tYears;
-        if(tYears <= 2) return 15 + 9*(tYears-1);
-        return 24 + R*(tYears-2);
-      }
-      const f1 = smoothBlend(tYears, 1, 0.25); const slope12 = 15 + f1*(9-15);
-      if(tYears <= 2){ const part0 = Math.min(tYears,1)*15; const part1 = tYears>1 ? (tYears-1)*slope12 : 0; return part0 + part1; }
-      const f2 = smoothBlend(tYears, 2, 0.5); const slopePost = 9 + f2*(R-9); const upTo2 = humanEqYears(2, lb, true); return upTo2 + (tYears-2)*slopePost;
-    }
-
-    function nextDogYearDate(dob, currentHumanEq, lb, useSmooth){
-      const target = Math.floor(currentHumanEq) + 1; const now = new Date(); const yearsNow = daysBetween(dob, now) / 365.2425;
-      let lo = yearsNow, hi = yearsNow + 5; for(let i=0;i<40;i++){ const mid=(lo+hi)/2; const h=humanEqYears(mid, lb, useSmooth); if(h>=target) hi=mid; else lo=mid; }
-      const t=(lo+hi)/2; return new Date(dob.getTime() + t*365.2425*24*60*60*1000);
-    }
-
-    // Breed group notes (display only)
+    // Breed notes (display only)
     const GROUPS = {
       'Working / Herding':['High drive: daily jobs/puzzles (herding games, scentwork, obedience chains).','Mental fatigue matters as much as physical; enrichment like snuffle mats and hide‑and‑seek.','Prevent under‑stimulation → boredom behaviors.'],
       'Sporting':['Endurance + retrieve instincts: structured fetch, dock diving, field games.','Watch weight gain; meal‑prep measured portions.'],
@@ -228,11 +208,11 @@
       'Mixed / Other':['Profile by observed drive (retrieve, scent, herd) rather than labels.']
     };
 
-    // Confetti
+    // Confetti (fix: multi‑color)
     function confetti(durationMs=1700){
       const canvas = document.createElement('canvas'); canvas.style.position='fixed'; canvas.style.inset='0'; canvas.style.pointerEvents='none'; canvas.width=innerWidth; canvas.height=innerHeight; document.body.appendChild(canvas);
       const ctx = canvas.getContext('2d'); const colors=['#4aa3ff','#6ae3b2','#ffd166','#ff6b6b','#a78bfa']; const N=160;
-      const parts = Array.from({length:N},()=>({x:Math.random()*canvas.width,y:-20-Math.random()*40,vx:(Math.random()-.5)*4,vy:2+Math.random()*3,g:0.05+Math.random()*0.05,s:4+Math.random()*4,c:colors[Math|0?Math.floor(Math.random()*5):0],r:Math.random()*Math.PI}));
+      const parts = Array.from({length:N},()=>({x:Math.random()*canvas.width,y:-20-Math.random()*40,vx:(Math.random()-.5)*4,vy:2+Math.random()*3,g:0.05+Math.random()*0.05,s:4+Math.random()*4,c:colors[Math.floor(Math.random()*colors.length)],r:Math.random()*Math.PI}));
       let start=null; function tick(ts){ if(!start) start=ts; const t=ts-start; ctx.clearRect(0,0,canvas.width,canvas.height); for(const p of parts){ p.x+=p.vx; p.y+=p.vy; p.vy+=p.g; p.r+=0.05; ctx.save(); ctx.translate(p.x,p.y); ctx.rotate(p.r); ctx.fillStyle=p.c; ctx.fillRect(-p.s/2,-p.s/2,p.s,p.s); ctx.restore(); } if(t<durationMs) requestAnimationFrame(tick); else canvas.remove(); } requestAnimationFrame(tick);
     }
 
@@ -241,10 +221,10 @@
     function icsEvent(summary, start, end){ return `BEGIN:VCALENDAR\nVERSION:2.0\nPRODID:-//Barkday//EN\nBEGIN:VEVENT\nUID:${Date.now()}@barkday\nDTSTAMP:${fmtUTC(new Date())}\nDTSTART:${fmtUTC(start)}\nDTEND:${fmtUTC(end)}\nSUMMARY:${summary}\nEND:VEVENT\nEND:VCALENDAR`; }
     function downloadICS(name, ics){ const blob=new Blob([ics],{type:'text/calendar'}); const a=document.createElement('a'); a.href=URL.createObjectURL(blob); a.download=name; document.body.appendChild(a); a.click(); a.remove(); }
 
-    // Gift loader (unchanged behavior)
+    // Gift loader (URL hidden)
     async function loadGifts(){
       els.gifts.innerHTML=''; els.giftMeta.textContent='Loading…';
-      try{ const res = await fetch(els.giftUrl.value,{cache:'no-store'}); const items = await res.json(); const lb=parseInt(els.adultWeight.value,10);
+      try{ const res = await fetch(GIFT_FEED_URL,{cache:'no-store'}); const items = await res.json(); const lb=parseInt(els.adultWeight.value,10);
         const bucket = lb<20?'toy':lb<30?'small':lb<50?'medium':lb<90?'large':'giant'; const h = parseFloat(els.humanYears.textContent);
         const filtered = items.filter(it=>{
           let ok=true; if(!els.ignoreChewer.checked && it.chewer){ ok = ok && (it.chewer.toLowerCase()===els.chewer.value.toLowerCase() || it.chewer==='any'); }
@@ -256,50 +236,42 @@
       }catch(e){ els.giftMeta.textContent='Could not load gift ideas.'; }
     }
 
-    // --- CALCULATE (button‑only)
+    // Calculate
+    const updateWeightLabel = ()=> els.adultWeightVal.textContent = els.adultWeight.value;
+    updateWeightLabel();
+
     function compute(){
       const dobStr = els.dob.value; if(!dobStr){ alert('Please select a birthdate.'); return; }
       const dob = new Date(dobStr); const now = new Date(); if(isNaN(dob.getTime()) || dob>now){ alert('Birthdate is invalid.'); return; }
       const lb = parseInt(els.adultWeight.value,10);
 
-      // Age now
       const days = daysBetween(dob, now); const years = days/365.2425; const yrs=Math.floor(years); const months=Math.floor((years%1)*12);
       els.dogAge.textContent = `${yrs}y ${months}m`;
 
-      // Human‑equivalent
       const H = humanEqYears(years, lb, els.smooth.checked); els.humanYears.textContent = H.toFixed(2); const R = slopeFromWeight(lb); els.slopeNote.textContent = `R≈${R.toFixed(2)} (weight‑continuous)`;
 
-      // Next dog‑year birthday (primary)
       const nbd = nextDogYearDate(dob, H, lb, els.smooth.checked); els.nextBday.textContent = nbd.toDateString(); const daysTo = daysBetween(now, nbd); els.nextBdayDelta.textContent = daysTo>0? `${daysTo} days from now` : '';
 
-      // Profile & group notes
       const name = els.dogName.value || 'your dog'; const breedTxt=(els.breed.value||'').trim(); const group=els.breedGroup.value; els.profileLine.textContent = `Profile: ${name}${breedTxt?` — ${breedTxt}`:''} • Group: ${group} • Weight: ${lb} lb`;
       const notes = GROUPS[group]||[]; els.breedNotes.innerHTML = notes.map(n=>`• ${n}`).join(' ');
 
-      // Gentle mismatch warning (weight remains authoritative)
       let warn=''; if(group.includes('Toy') && lb>30) warn='Breed group "Toy" but weight > 30 lb. Math stays weight‑based.'; if((group.includes('Guardian')||group.includes('Working')) && lb<20) warn='Breed group suggests large/giant, but weight < 20 lb. Math stays weight‑based.'; els.sizeWarn.style.display = warn? 'block':'none'; els.sizeWarn.textContent = warn;
 
-      // Gift meta
       els.giftMeta.textContent = `Gift picks for ${name} — by weight ${lb} lb${breedTxt?`, ${breedTxt}`:''}`;
 
-      // Celebrate!
       els.nextBday.scrollIntoView({behavior:'smooth', block:'center'}); confetti();
     }
 
-    // Reset & Share
+    // Events
     els.calcBtn.addEventListener('click', compute);
-    els.resetBtn.addEventListener('click', ()=>{
-      els.dogName.value=''; els.dob.value=''; els.adultWeight.value=55; els.adultWeightVal.textContent='55'; els.chewer.value='Normal'; els.showEpi.checked=false; els.smooth.checked=true; els.breed.value=''; els.breedGroup.value='Working / Herding'; els.ignoreAge.checked=els.ignoreSize.checked=els.ignoreChewer.checked=false; els.nextBday.textContent='—'; els.nextBdayDelta.textContent=''; els.dogAge.textContent='—'; els.humanYears.textContent='—'; els.slopeNote.textContent=''; els.epi.textContent=''; els.gifts.innerHTML=''; els.giftMeta.textContent=''; els.sizeWarn.style.display='none'; renderHero();
-    });
-    els.shareBtn.addEventListener('click', ()=>{
-      const p = new URLSearchParams({ n:els.dogName.value||'', d:els.dob.value||'', w:els.adultWeight.value, c:els.chewer.value, g:els.breedGroup.value, r:els.breed.value||'', s:els.smooth.checked?1:0, e:els.showEpi.checked?1:0 });
-      const url = location.origin + location.pathname + '?' + p.toString(); navigator.clipboard.writeText(url).then(()=>alert('Shareable link copied.')).catch(()=>alert(url));
-    });
+    els.resetBtn.addEventListener('click', ()=>{ els.dogName.value=''; els.dob.value=''; els.adultWeight.value=55; updateWeightLabel(); els.chewer.value='Normal'; els.showEpi.checked=false; els.smooth.checked=true; els.breed.value=''; els.breedGroup.value='Working / Herding'; els.ignoreAge.checked=els.ignoreSize.checked=els.ignoreChewer.checked=false; els.nextBday.textContent='—'; els.nextBdayDelta.textContent=''; els.dogAge.textContent='—'; els.humanYears.textContent='—'; els.slopeNote.textContent=''; els.epi.textContent=''; els.gifts.innerHTML=''; els.giftMeta.textContent=''; els.sizeWarn.style.display='none'; renderHero(); });
+    els.shareBtn.addEventListener('click', ()=>{ const p=new URLSearchParams({ n:els.dogName.value||'', d:els.dob.value||'', w:els.adultWeight.value, c:els.chewer.value, g:els.breedGroup.value, r:els.breed.value||'', s:els.smooth.checked?1:0, e:els.showEpi.checked?1:0 }); const url=location.origin+location.pathname+'?'+p.toString(); navigator.clipboard.writeText(url).then(()=>alert('Shareable link copied.')).catch(()=>alert(url)); });
 
     // ICS buttons
-    els.addCal.addEventListener('click', ()=>{ if(!els.nextBday.textContent || els.nextBday.textContent==='—'){ alert('Calculate first.'); return; } const start=new Date(els.nextBday.textContent); const end=new Date(start.getTime()+60*60*1000); const name=els.dogName.value||'Your dog'; downloadICS('barkday.ics', icsEvent(`${name} — Next Dog‑Year Birthday`, start, end)); });
+    function fmtUTC(d){ const pad=n=>String(n).padStart(2,'0'); return d.getUTCFullYear()+pad(d.getUTCMonth()+1)+pad(d.getUTCDate())+'T'+pad(d.getUTCHours())+pad(d.getUTCMinutes())+pad(d.getUTCSeconds())+'Z'; }
+    els.addCal.addEventListener('click', ()=>{ if(!els.nextBday.textContent || els.nextBday.textContent==='—'){ alert('Calculate first.'); return; } const start=new Date(els.nextBday.textContent); const end=new Date(start.getTime()+60*60*1000); const name=els.dogName.value||'Your dog'; const ics=`BEGIN:VCALENDAR\nVERSION:2.0\nPRODID:-//Barkday//EN\nBEGIN:VEVENT\nUID:${Date.now()}@barkday\nDTSTAMP:${fmtUTC(new Date())}\nDTSTART:${fmtUTC(start)}\nDTEND:${fmtUTC(end)}\nSUMMARY:${name} — Next Dog‑Year Birthday\nEND:VEVENT\nEND:VCALENDAR`; const blob=new Blob([ics],{type:'text/calendar'}); const a=document.createElement('a'); a.href=URL.createObjectURL(blob); a.download='barkday.ics'; document.body.appendChild(a); a.click(); a.remove(); });
     els.remind.addEventListener('click', ()=> alert('Reminder integration placeholder: add 1‑week reminder.'));
-    els.addYearSeries.addEventListener('click', ()=>{ if(!els.dob.value){ alert('Calculate first.'); return; } const name=els.dogName.value||'Your dog'; const dob=new Date(els.dob.value); const lb=parseInt(els.adultWeight.value,10); const now=new Date(); const years=daysBetween(dob, now)/365.2425; const H=humanEqYears(years, lb, els.smooth.checked); let cur=nextDogYearDate(dob, H, lb, els.smooth.checked); let human=Math.floor(H)+1; let ics='BEGIN:VCALENDAR\nVERSION:2.0\nPRODID:-//Barkday//EN\n'; for(let i=0;i<3;i++){ const start=cur; const end=new Date(start.getTime()+60*60*1000); ics+=`BEGIN:VEVENT\nUID:${Date.now()+Math.random()}@barkday\nDTSTAMP:${fmtUTC(new Date())}\nDTSTART:${fmtUTC(start)}\nDTEND:${fmtUTC(end)}\nSUMMARY:${name} — Dog‑Year ${human}\nEND:VEVENT\n`; human++; cur=nextDogYearDate(dob, human-1, lb, els.smooth.checked); } ics+='END:VCALENDAR'; downloadICS('barkday_series.ics', ics); });
+    els.addYearSeries.addEventListener('click', ()=>{ if(!els.dob.value){ alert('Calculate first.'); return; } const name=els.dogName.value||'Your dog'; const dob=new Date(els.dob.value); const lb=parseInt(els.adultWeight.value,10); const now=new Date(); const years=daysBetween(dob, now)/365.2425; const H=humanEqYears(years, lb, els.smooth.checked); let cur=nextDogYearDate(dob, H, lb, els.smooth.checked); let human=Math.floor(H)+1; let ics='BEGIN:VCALENDAR\nVERSION:2.0\nPRODID:-//Barkday//EN\n'; for(let i=0;i<3;i++){ const start=cur; const end=new Date(start.getTime()+60*60*1000); ics+=`BEGIN:VEVENT\nUID:${Date.now()+Math.random()}@barkday\nDTSTAMP:${fmtUTC(new Date())}\nDTSTART:${fmtUTC(start)}\nDTEND:${fmtUTC(end)}\nSUMMARY:${name} — Dog‑Year ${human}\nEND:VEVENT\n`; human++; cur=nextDogYearDate(dob, human-1, lb, els.smooth.checked); } ics+='END:VCALENDAR'; const blob=new Blob([ics],{type:'text/calendar'}); const a=document.createElement('a'); a.href=URL.createObjectURL(blob); a.download='barkday_series.ics'; document.body.appendChild(a); a.click(); a.remove(); });
 
     // Gift loader
     els.loadGifts.addEventListener('click', loadGifts);
