--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     .pill{border:1px solid var(--border);background:linear-gradient(180deg,rgba(255,255,255,.02),rgba(0,0,0,.05));border-radius:14px;padding:10px 12px}
     .pill h3{margin:0 0 6px;font-size:15px;color:var(--muted);font-weight:600}
     .big{font-size:24px;font-weight:800}
+    .pill.primary .big{font-size:26px}
+    .headline{font-size:28px;font-weight:900;line-height:1.15;margin:0 0 4px}
     .btn{appearance:none;border:1px solid var(--border);background:var(--brand);color:white;padding:10px 14px;border-radius:12px;cursor:pointer}
     .btn.secondary{background:transparent;color:var(--text)}
     .cardlist{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:12px}
@@ -110,8 +112,6 @@
         </div>
       </div>
 
-      <!-- Gift feed is internal; no URL input shown -->
-
       <div class="row" style="margin-top:8px">
         <label class="muted"><input id="ignoreAge" type="checkbox"/> Ignore age filter</label>
         <label class="muted"><input id="ignoreSize" type="checkbox"/> Ignore size filter</label>
@@ -130,7 +130,7 @@
 
       <h2>Results</h2>
       <div class="kpi">
-        <div class="pill primary"><h3>Next dog‑year birthday</h3><div class="big" id="nextBday">—</div><div class="muted" id="nextBdayDelta"></div></div>
+        <div class="pill primary"><div class="headline" id="nextHeadline">—</div><div class="big" id="nextBday">—</div><div class="muted" id="nextBdayDelta"></div></div>
         <div class="pill"><h3>Dog age today</h3><div class="big" id="dogAge">—</div></div>
         <div class="pill"><h3>Human‑years estimate</h3><div class="big" id="humanYears">—</div><div class="muted" id="slopeNote"></div></div>
       </div>
@@ -167,7 +167,15 @@
 
     // Elements
     const el = id => document.getElementById(id);
-    const els = {$1breedNotes: el('breedNotes'), nextHeadline: el('nextHeadline')
+    const els = {
+      dogName: el('dogName'), dob: el('dob'), adultWeight: el('adultWeight'), adultWeightVal: el('adultWeightVal'),
+      chewer: el('chewer'), showEpi: el('showEpigenetic'), smooth: el('smoothMilestones'), breed: el('breed'), breedGroup: el('breedGroup'),
+      ignoreAge: el('ignoreAge'), ignoreSize: el('ignoreSize'), ignoreChewer: el('ignoreChewer'),
+      calcBtn: el('calcBtn'), resetBtn: el('resetBtn'), shareBtn: el('shareBtn'), sizeWarn: el('sizeWarn'),
+      nextHeadline: el('nextHeadline'), nextBday: el('nextBday'), nextBdayDelta: el('nextBdayDelta'),
+      dogAge: el('dogAge'), humanYears: el('humanYears'), slopeNote: el('slopeNote'),
+      addCal: el('addCalBtn'), remind: el('remindBtn'), addYearSeries: el('addYearSeries'),
+      loadGifts: el('loadGifts'), giftMeta: el('giftMeta'), gifts: el('gifts'), heroLine: el('heroLine'), profileLine: el('profileLine'), breedNotes: el('breedNotes')
     };
 
     // Personalized header
@@ -201,7 +209,7 @@
       'Mixed / Other':['Profile by observed drive (retrieve, scent, herd) rather than labels.']
     };
 
-    // Confetti (fix: multi‑color)
+    // Confetti (multi‑color)
     function confetti(durationMs=1700){
       const canvas = document.createElement('canvas'); canvas.style.position='fixed'; canvas.style.inset='0'; canvas.style.pointerEvents='none'; canvas.width=innerWidth; canvas.height=innerHeight; document.body.appendChild(canvas);
       const ctx = canvas.getContext('2d'); const colors=['#4aa3ff','#6ae3b2','#ffd166','#ff6b6b','#a78bfa']; const N=160;
@@ -229,47 +237,54 @@
       }catch(e){ els.giftMeta.textContent='Could not load gift ideas.'; }
     }
 
-    // Calculate
-    const updateWeightLabel = ()=> els.adultWeightVal.textContent = els.adultWeight.value;
-    updateWeightLabel();
+    // CALCULATE
+    const updateWeightLabel = ()=> els.adultWeightVal.textContent = els.adultWeight.value; updateWeightLabel();
 
     function compute(){
       const dobStr = els.dob.value; if(!dobStr){ alert('Please select a birthdate.'); return; }
       const dob = new Date(dobStr); const now = new Date(); if(isNaN(dob.getTime()) || dob>now){ alert('Birthdate is invalid.'); return; }
       const lb = parseInt(els.adultWeight.value,10);
 
+      // Age now
       const days = daysBetween(dob, now); const years = days/365.2425; const yrs=Math.floor(years); const months=Math.floor((years%1)*12);
       els.dogAge.textContent = `${yrs}y ${months}m`;
 
+      // Human‑equivalent
       const H = humanEqYears(years, lb, els.smooth.checked); els.humanYears.textContent = H.toFixed(2); const R = slopeFromWeight(lb); els.slopeNote.textContent = `R≈${R.toFixed(2)} (weight‑continuous)`;
 
+      // Next dog‑year (primary)
+      const name = els.dogName.value || 'your dog';
+      const upcoming = Math.floor(H)+1; els.nextHeadline.textContent = `${name} is about to be ${upcoming} years old!`;
       const nbd = nextDogYearDate(dob, H, lb, els.smooth.checked); els.nextBday.textContent = nbd.toDateString(); const daysTo = daysBetween(now, nbd); els.nextBdayDelta.textContent = daysTo>0? `${daysTo} days from now` : '';
 
-      const name = els.dogName.value || 'your dog'; const upcoming = Math.floor(H) + 1; els.nextHeadline.textContent = `${name} is about to be ${upcoming} years old!`; const breedTxt=(els.breed.value||'').trim(); const group=els.breedGroup.value; els.profileLine.textContent = `Profile: ${name}${breedTxt?` — ${breedTxt}`:''} • Group: ${group} • Weight: ${lb} lb`;
+      // Profile & notes
+      const breedTxt=(els.breed.value||'').trim(); const group=els.breedGroup.value; els.profileLine.textContent = `Profile: ${name}${breedTxt?` — ${breedTxt}`:''} • Group: ${group} • Weight: ${lb} lb`;
       const notes = GROUPS[group]||[]; els.breedNotes.innerHTML = notes.map(n=>`• ${n}`).join(' ');
 
+      // Gentle mismatch warning
       let warn=''; if(group.includes('Toy') && lb>30) warn='Breed group "Toy" but weight > 30 lb. Math stays weight‑based.'; if((group.includes('Guardian')||group.includes('Working')) && lb<20) warn='Breed group suggests large/giant, but weight < 20 lb. Math stays weight‑based.'; els.sizeWarn.style.display = warn? 'block':'none'; els.sizeWarn.textContent = warn;
 
+      // Gift meta
       els.giftMeta.textContent = `Gift picks for ${name} — by weight ${lb} lb${breedTxt?`, ${breedTxt}`:''}`;
 
+      // Celebrate
       els.nextBday.scrollIntoView({behavior:'smooth', block:'center'}); confetti();
     }
 
-    // Events
+    // EVENTS
     els.calcBtn.addEventListener('click', compute);
-    els.resetBtn.addEventListener('click', ()=>{ els.dogName.value=''; els.dob.value=''; els.adultWeight.value=55; updateWeightLabel(); els.chewer.value='Normal'; els.showEpi.checked=false; els.smooth.checked=true; els.breed.value=''; els.breedGroup.value='Working / Herding'; els.ignoreAge.checked=els.ignoreSize.checked=els.ignoreChewer.checked=false; els.nextBday.textContent='—'; els.nextBdayDelta.textContent=''; els.dogAge.textContent='—'; els.humanYears.textContent='—'; els.slopeNote.textContent=''; els.epi.textContent=''; els.gifts.innerHTML=''; els.giftMeta.textContent=''; els.sizeWarn.style.display='none'; renderHero(); });
+    els.resetBtn.addEventListener('click', ()=>{ els.dogName.value=''; els.dob.value=''; els.adultWeight.value=55; updateWeightLabel(); els.chewer.value='Normal'; els.showEpi.checked=false; els.smooth.checked=true; els.breed.value=''; els.breedGroup.value='Working / Herding'; els.ignoreAge.checked=els.ignoreSize.checked=els.ignoreChewer.checked=false; els.nextHeadline.textContent='—'; els.nextBday.textContent='—'; els.nextBdayDelta.textContent=''; els.dogAge.textContent='—'; els.humanYears.textContent='—'; els.slopeNote.textContent=''; els.epi.textContent=''; els.gifts.innerHTML=''; els.giftMeta.textContent=''; els.sizeWarn.style.display='none'; renderHero(); });
     els.shareBtn.addEventListener('click', ()=>{ const p=new URLSearchParams({ n:els.dogName.value||'', d:els.dob.value||'', w:els.adultWeight.value, c:els.chewer.value, g:els.breedGroup.value, r:els.breed.value||'', s:els.smooth.checked?1:0, e:els.showEpi.checked?1:0 }); const url=location.origin+location.pathname+'?'+p.toString(); navigator.clipboard.writeText(url).then(()=>alert('Shareable link copied.')).catch(()=>alert(url)); });
 
     // ICS buttons
-    function fmtUTC(d){ const pad=n=>String(n).padStart(2,'0'); return d.getUTCFullYear()+pad(d.getUTCMonth()+1)+pad(d.getUTCDate())+'T'+pad(d.getUTCHours())+pad(d.getUTCMinutes())+pad(d.getUTCSeconds())+'Z'; }
-    els.addCal.addEventListener('click', ()=>{ if(!els.nextBday.textContent || els.nextBday.textContent==='—'){ alert('Calculate first.'); return; } const start=new Date(els.nextBday.textContent); const end=new Date(start.getTime()+60*60*1000); const name=els.dogName.value||'Your dog'; const ics=`BEGIN:VCALENDAR\nVERSION:2.0\nPRODID:-//Barkday//EN\nBEGIN:VEVENT\nUID:${Date.now()}@barkday\nDTSTAMP:${fmtUTC(new Date())}\nDTSTART:${fmtUTC(start)}\nDTEND:${fmtUTC(end)}\nSUMMARY:${name} — Next Dog‑Year Birthday\nEND:VEVENT\nEND:VCALENDAR`; const blob=new Blob([ics],{type:'text/calendar'}); const a=document.createElement('a'); a.href=URL.createObjectURL(blob); a.download='barkday.ics'; document.body.appendChild(a); a.click(); a.remove(); });
+    els.addCal.addEventListener('click', ()=>{ if(!els.nextBday.textContent || els.nextBday.textContent==='—'){ alert('Calculate first.'); return; } const start=new Date(els.nextBday.textContent); const end=new Date(start.getTime()+60*60*1000); const name=els.dogName.value||'Your dog'; downloadICS('barkday.ics', icsEvent(`${name} — Next Dog‑Year Birthday`, start, end)); });
     els.remind.addEventListener('click', ()=> alert('Reminder integration placeholder: add 1‑week reminder.'));
-    els.addYearSeries.addEventListener('click', ()=>{ if(!els.dob.value){ alert('Calculate first.'); return; } const name=els.dogName.value||'Your dog'; const dob=new Date(els.dob.value); const lb=parseInt(els.adultWeight.value,10); const now=new Date(); const years=daysBetween(dob, now)/365.2425; const H=humanEqYears(years, lb, els.smooth.checked); let cur=nextDogYearDate(dob, H, lb, els.smooth.checked); let human=Math.floor(H)+1; let ics='BEGIN:VCALENDAR\nVERSION:2.0\nPRODID:-//Barkday//EN\n'; for(let i=0;i<3;i++){ const start=cur; const end=new Date(start.getTime()+60*60*1000); ics+=`BEGIN:VEVENT\nUID:${Date.now()+Math.random()}@barkday\nDTSTAMP:${fmtUTC(new Date())}\nDTSTART:${fmtUTC(start)}\nDTEND:${fmtUTC(end)}\nSUMMARY:${name} — Dog‑Year ${human}\nEND:VEVENT\n`; human++; cur=nextDogYearDate(dob, human-1, lb, els.smooth.checked); } ics+='END:VCALENDAR'; const blob=new Blob([ics],{type:'text/calendar'}); const a=document.createElement('a'); a.href=URL.createObjectURL(blob); a.download='barkday_series.ics'; document.body.appendChild(a); a.click(); a.remove(); });
+    els.addYearSeries.addEventListener('click', ()=>{ if(!els.dob.value){ alert('Calculate first.'); return; } const name=els.dogName.value||'Your dog'; const dob=new Date(els.dob.value); const lb=parseInt(els.adultWeight.value,10); const now=new Date(); const years=daysBetween(dob, now)/365.2425; const H=humanEqYears(years, lb, els.smooth.checked); let cur=nextDogYearDate(dob, H, lb, els.smooth.checked); let human=Math.floor(H)+1; let ics='BEGIN:VCALENDAR\nVERSION:2.0\nPRODID:-//Barkday//EN\n'; for(let i=0;i<3;i++){ const start=cur; const end=new Date(start.getTime()+60*60*1000); ics+=`BEGIN:VEVENT\nUID:${Date.now()+Math.random()}@barkday\nDTSTAMP:${fmtUTC(new Date())}\nDTSTART:${fmtUTC(start)}\nDTEND:${fmtUTC(end)}\nSUMMARY:${name} — Dog‑Year ${human}\nEND:VEVENT\n`; human++; cur=nextDogYearDate(dob, human-1, lb, els.smooth.checked); } ics+='END:VCALENDAR'; downloadICS('barkday_series.ics', ics); });
 
     // Gift loader
     els.loadGifts.addEventListener('click', loadGifts);
 
-    // QS hydrate (no auto compute)
+    // Hydrate from QS (no auto compute)
     (function initFromQS(){ const q=new URLSearchParams(location.search); if(q.size){ els.dogName.value=q.get('n')||''; els.dob.value=q.get('d')||''; els.adultWeight.value=q.get('w')||55; els.adultWeightVal.textContent=els.adultWeight.value; els.chewer.value=q.get('c')||'Normal'; els.breedGroup.value=q.get('g')||'Working / Herding'; els.breed.value=q.get('r')||''; els.smooth.checked=q.get('s')==='1'; els.showEpi.checked=q.get('e')==='1'; renderHero(); } })();
   </script>
 </body>
